# agent_pro

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  MANIFEST.in  README.md  SUMMARY.md  install.sh  opencode.json  pyproject.toml  requirements.txt
.opencode/skills/boot-analysis/: SKILL.md
.opencode/skills/firmware-flash/: SKILL.md
.opencode/skills/gdb-debug/: SKILL.md
.opencode/skills/i2c-debug/: SKILL.md
.opencode/skills/log-analysis/: SKILL.md
.opencode/skills/network-diag/: SKILL.md
.opencode/skills/register-debug/: SKILL.md
.opencode/skills/spi-debug/: SKILL.md
configs/: mcp-generic.json  opencode.json
mcp_server/: device_registry.py  devices.json  ftp_server.py  server.py
mcp_server/firmware/: flash_mgr.py
mcp_server/firmware/configs/: imx6ull.json  rk3566.json
mcp_server/registers/: __init__.py  eth_mac_regs.json  reg_db.py
mcp_server/sessions/: __init__.py  gdb_session.py  pool.py  session.py
mcp_server/tools/: __init__.py  connection.py  execution.py  file_transfer.py  flash.py  ftp.py  gdb.py  logging.py  registers.py  serial_ports.py
mcp_server/transports/: __init__.py  base.py  serial.py  ssh.py  telnet.py
prompts/: boot-analysis.txt  firmware-flash.txt  gdb-debug.txt  i2c-debug.txt  log-analysis.txt  network-diag.txt  register-debug.txt  spi-debug.txt
scripts/: setup.sh  test_device.py
skills/: boot-analysis.md  firmware-flash.md  gdb-debug.md  i2c-debug.md  log-analysis.md  network-diag.md  spi-debug.md
